elasticstack/kibana-ingress.yaml
# apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1beta1
# apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticstack-kibana-ingress
  namespace: elastic-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: kibana.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: elasticstack-kb-http
              servicePort: 5601
